var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
/* OTOBO is a web-based ticketing system for service organisations.

Copyright (C) 2019-2025 Rother OSS GmbH, https://otobo.io/

This program is free software: you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation, either version 3 of the License, or (at your option) any later version.
This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
You should have received a copy of the GNU General Public License
along with this program. If not, see <https://www.gnu.org/licenses/>.
*/

/**
 * @package     Skin "Default"
 * @section     Default Settings
 */

@media screen,projection,tv,handheld {

/**
 * @subsection ArticleList Expanding
 */

.FAQ .OverviewControl div {
    padding: 0px;
}

.FAQ #OverviewBody {
    margin: 0 0 8px 0;
}

/**
 * @subsection Large SidebarColumn
 */

.LayoutFixedSidebar.SidebarLast > .SidebarColumn.Large {
    width: 350px;
    float: right;
    margin-left: 16px;
    margin-right: 0;
}

.LayoutFixedSidebar.SidebarLast > .SidebarColumn.Medium {
    width: 290px;
    float: right;
    margin-left: 16px;
    margin-right: 0;
}

/**
 * @subsection FAQMiniList
 */

ul.FAQMiniList span {
    display: block;
    font-size: 10px;
}

iframe.TextOption.FAQ {
    width: 900px;
    min-height: 600px;
}

iframe.FAQField {
    width: 100%;
    frameborder: 0;
}

fieldset.TableSmall > div.Field {
    margin-left: 24% !important;
}

fieldset.TableSmall > label {
    width: 24% !important;
}

fieldset.TableSmall > div.FAQDivider {
    border-bottom: 1px solid #CCCCCC;
    margin-left: auto;
    margin-right: auto;
}

.TableSmall tbody tr.Invalid {
    color: #CCC;
}

#FAQRelatedArticles table {
    clear: none;
    width: 100%;
    max-width: 622px;
    line-height: 13px;
}

#FAQRelatedArticles table .FAQVotes {
    padding: 0 3px;
    width: 70px;
}

#FAQRelatedArticles table .FAQVotes i {
    margin-right: 0px;
}

#FAQRelatedArticles table .FAQCategorie {
    width: 25%;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

#FAQRelatedArticles table .FAQTitle {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

#FAQRelatedArticles table .FAQDate {
    width: 65px;
    overflow: hidden;
}

}

